# stan-config

./: BUILD  CMakeLists.txt
checks/: default-construct  template-pack  template-pack.cpp
src/: CMakeLists.txt  argument-T.hpp  argument.hpp  argument_nonnegative_int.hpp  argument_positive_int.hpp  argument_traits.hpp
src/checks/: default-construct.cpp  template-pack  template-pack.cpp  thin-create  thin-create.cpp
src/stan/config/: arg_adapt.hpp  arg_error.hpp  arg_num_samples.hpp  arg_num_warmup.hpp  arg_save_warmup.hpp  arg_thin.hpp  argument.hpp  argument_traits.hpp  validate.hpp
src/test/unit/: CMakeLists.txt  integer-traits-test.cpp  nonnegative-integer-validate-test.cpp  nonnegative-traits-test.cpp  positive-integer-validate-test.cpp  positive-traits-test.cpp  traits-test.cpp  traits-test.txt
